Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,12 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_titles(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    alert = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    container = alert.nextSibling.nextSibling\n",
+    "    titles = [i.find('a').attrs['title'] for i in container.findall('h3')]\n",
+    "    return titles"
    ]
   },
   {
@@ -69,12 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def retrieve_ratings(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    alert = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    container = alert.nextSibling.nextSibling\n",
+    "    stars = {'One': 1, 'Two': 2, 'Three': 3, 'Four': 4, 'Five': 5}\n",
+    "    regex = re.compile(\"star-rating (.*)\")\n",
+    "    ratings = [i.attrs['class'][-1] for i in container.findall('p', {'class': regex})]\n",
+    "    ratings = [stars[i] for i in ratings]\n",
+    "    return ratings"
    ]
   },
   {
@@ -88,12 +100,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_prices(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    alert = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    container = alert.nextSibling.nextSibling\n",
+    "    prices = [i.text for i in container.findall('p', class_='price-color')]\n",
+    "    prices = [float(i[1:]) for i in prices]\n",
+    "    return prices"
    ]
   },
   {
@@ -107,12 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def retrieve_availabilities(soup):\n",
-    "    #Your code here"
+    "    #Your code here\n",
+    "    alert = soup.find('div', class_=\"alert alert-warning\")\n",
+    "    container = alert.nextSibling.nextSibling\n",
+    "    available = [i.text.strip() for i in container.findall('p', class_='instock availability')]\n",
+    "    return available"
    ]
   },
   {
@@ -130,7 +151,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "import re\n",
+    "import requests\n",
+    "from bs4 import BeautifulSoup as bs\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titles = []\n",
+    "ratings = []\n",
+    "prices = []\n",
+    "available = []\n",
+    "\n",
+    "for i in range(1, 51):\n",
+    "    url = f\"http://books.toscrape.com/catalogue/page-{i}.html\"\n",
+    "    page = requests.get(url)\n",
+    "    soup = bs(page.content, 'html.parser')\n",
+    "    "
    ]
   },
   {
@@ -177,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
